without attach and io

--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="bower_components/snap.svg/dist/snap.svg.js"></script>
-	<script src="bower_components/socket.io/lib/client.js"></script>
+	<script src="bower_components/socket.io-client/socket.io.js"></script>
 	<script src="bower_components/bluebird/js/browser/bluebird.min.js"></script>
 	<script src="bower_components/lodash/dist/lodash.min.js"></script>
+	<link rel="stylesheet" href="app.css">
 	<title>Snap</title>
-	<style>
-	#main {
-		margin: auto;
-		display: block;
-	}
-	</style>
 </head>
 <body>
-	<svg width="800" height="600" id="main" viewBox="0 0 800 800"></svg>
-	<button type="button" id="handle">click</button>
+	<svg width="800" height="600" id="main" viewBox="0 0 1000 800"></svg>
+	<button type="button" id="handle">add new user</button>
+	<button type="button" id="">cooldown</button>
 	<script src="app.js"></script>
 </body>
 </html>
