--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 	<script src="bower_components/socket.io-client/socket.io.js"></script>
 	<script src="bower_components/bluebird/js/browser/bluebird.min.js"></script>
 	<script src="bower_components/lodash/dist/lodash.min.js"></script>
+	<script src="bower_components/three.js/three.min.js"></script>
+	<script src="bower_components/tween.min.js"></script>
+	<script src="bower_components/TrackballControls.js"></script>
 	<link rel="stylesheet" href="app.css">
 	<title>Snap</title>
 </head>
 <body>
+	<div id="background"></div>
 	<svg width="800" height="600" id="main" viewBox="0 0 1000 800"></svg>
 	<button type="button" id="handle">add new user</button>
 	<button type="button" id="">cooldown</button>
+	<script src="background.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
